--- a/limehd/res/values-zh-rCN/strings.xml
+++ b/limehd/res/values-zh-rCN/strings.xml
@@ -84,7 +84,7 @@
     <string name="ez_reverse_lookup_list">轻松字根反查</string>
     <string name="array_reverse_lookup_list">行列字根反查</string>
     <string name="array10_reverse_lookup_list">行列10字根反查</string>
-    <string name="cj5_reverse_lookup_list">仓颉五字根反查</string>
+    <string name="cj5_reverse_lookup_list">仓颉五代字根反查</string>
     <string name="ecj_reverse_lookup_list">速成字根反查</string>
     <string name="wb_reverse_lookup_list">笔顺五码字根反查</string>
     
@@ -220,7 +220,7 @@
 		<item>自建</item>
 		<item>仓颉</item>
 		<item>快仓</item>
-		<item>仓颉五</item>
+		<item>仓颉五代</item>
 		<item>速成</item>
 		<item>大易</item>
 		<item>注音</item>
@@ -248,7 +248,7 @@
 		<item>LIME输入法</item>
 		<item>仓颉输入法</item>
 		<item>快仓输入法</item>
-		<item>仓颉五输入法</item>
+		<item>仓颉五代输入法</item>
 		<item>速成输入法</item>
 		<item>大易输入法</item>
 		<item>注音输入法</item>
@@ -263,7 +263,7 @@
 		<item>LIME</item>
 		<item>仓颉</item>
 		<item>快仓</item>
-		<item>仓颉五</item>
+		<item>仓颉五代</item>
 		<item>速成</item>
 		<item>大易</item>
 		<item>注音</item>
@@ -328,7 +328,7 @@
 		<item>自建/电话</item>
 		<item>仓颉</item>
 		<item>快仓</item>
-		<item>仓颉五</item>
+		<item>仓颉五代</item>
 		<item>速成</item>
 		<item>大易</item>
 		<item>注音</item>
@@ -360,7 +360,7 @@
     <string name="l3_manage_phonetic">注音</string>
     <string name="l3_manage_phonetic_adv">注音连打</string>
     <string name="l3_manage_cj">仓颉</string>
-    <string name="l3_manage_cj5">仓颉五</string>
+    <string name="l3_manage_cj5">仓颉五代</string>
     <string name="l3_manage_ecj">速成</string>
     <string name="l3_manage_scj">快仓</string>
     <string name="l3_manage_dayi">大易</string>
@@ -427,9 +427,9 @@
     <string name="l3_im_download_from_cj_start">开始下载仓颉字根</string>
     <string name="l3_im_download_from_cj_install">开始安装仓颉字根</string>
     
-    <string name="l3_im_download_from_cj5">下载并安装仓颉五字根</string>
-    <string name="l3_im_download_from_cj5_start">开始下载仓颉五字根</string>
-    <string name="l3_im_download_from_cj5_install">开始安装仓颉五字根</string>
+    <string name="l3_im_download_from_cj5">下载并安装仓颉五代字根</string>
+    <string name="l3_im_download_from_cj5_start">开始下载仓颉五代字根</string>
+    <string name="l3_im_download_from_cj5_install">开始安装仓颉五代字根</string>
     
     <string name="l3_im_download_from_ecj">下载并安装速成字根</string>
     <string name="l3_im_download_from_ecj_start">开始下载速成字根</string>
@@ -489,7 +489,7 @@
     
     
     <!-- 自动上屏设定 -->
-    <string name="auto_commit">电话键盘自动上屏</string>
+    <string name="auto_commit">电话/笔顺五码自动上屏</string>
     <string name="auto_commit_summary">当输入字根符合设定数则自动送出组字</string>
 	<string-array name="auto_commit_labels">
 		<item>无</item>
