--- a/trunk/limehd/res/values/strings.xml
+++ b/trunk/limehd/res/values/strings.xml
@@ -523,7 +523,7 @@
     <string name="auto_chinese_symbol_summary">Fetch Chinese Symbols when no suggestions present</string>
 
     <!-- Input auto commit  -->
-    <string name="auto_commit">Phone-KB Auto Commit Composing</string>
+    <string name="auto_commit">Phone-KB and Stroke5 Auto Commit Composing</string>
     <string name="auto_commit_summary">Auto commit text when composing length meet the setting</string>
 	<string-array name="auto_commit_labels">
 		<item>None</item>
