Try ignore error from SearchService to prevent Force Close error

--- a/limehd/res/values-zh-rCN/strings.xml
+++ b/limehd/res/values-zh-rCN/strings.xml
@@ -508,9 +508,9 @@
 		<item>6</item>
 	</string-array>
 	
-	
 	<string name="release_note">
-		更新说明\n\n
+		更新说明\n
+		http://facebook.com/limeime\n\n
 	
 		1. 键盘文字显示更新\n
 		2. 新增注音连打功能\n
@@ -536,7 +536,8 @@
 		17. 许氏跟倚天26 臭虫修正\n
 		18. 向下的圆圈圈箭头，另外实体键盘也可展开候选列\n
 		19. 轻松输入法修正\n
-		20. 倚天41键注音符号键盘更新\n\n
+		20. 新增笔顺五码输入法\n
+		21. 倚天41键注音符号键盘更新\n\n
 		 
 		软体键盘快捷键\n\n
 		
