--- a/limehd/res/values-zh-rTW/strings.xml
+++ b/limehd/res/values-zh-rTW/strings.xml
@@ -509,7 +509,8 @@
 	</string-array>
 	
 	<string name="release_note">
-		更新說明\n\n
+		更新說明\n
+		http://facebook.com/limeime\n\n
 	
 		1. 鍵盤文字顯示更新\n
 		2. 新增注音連打功能\n
@@ -535,7 +536,8 @@
 		17. 許氏跟倚天26 臭蟲修正\n
 		18. 向下的圓圈圈箭頭，另外實體鍵盤也可展開候選列\n
 		19. 輕鬆輸入法修正\n
-		20. 倚天41鍵注音符號鍵盤更新\n\n
+		20. 新增筆順五碼輸入法\n
+		21. 倚天41鍵注音符號鍵盤更新\n\n
 		 
 		軟體鍵盤快捷鍵\n\n
 		
