--- a/limehd/res/values/strings.xml
+++ b/limehd/res/values/strings.xml
@@ -541,52 +541,53 @@
 		<item>5</item>
 		<item>6</item>
 	</string-array>
-
-	<string name="release_note">
-		更新说明\n\n
+<string name="release_note">
+		更新說明\n
+		http://facebook.com/limeime\n\n
 	
-		1. 键盘文字显示更新\n
-		2. 新增注音连打功能\n
-		3. 新增字频资料，改善关联字显示顺序\n
-		4. 候选字列扩展，点选候选列向下圆型箭头\n
-		5. 三排键自动对应修正\n
-		6. 支援 HTC Flyer 装置显示\n
-		7. 支援 Galaxy Tab 装置显示\n
-		8. 新增自动中文标点模式设定\n
-		9. 改进初始资料库选项\n
-		10. 更新预载资料库内容 (需重新下载)\n
-		11. 输入效能提升、臭虫修正\n
-		12. 支援 ChaCha 键盘输入\n
-		13. 设定字型与键盘大小\n
-		14. 震动强度设定\n
-		15. 长按键盘键选单新增简繁互换\n
-		16. 键盘 Swipe 功能\n
+		1. 鍵盤文字顯示更新\n
+		2. 新增注音連打功能\n
+		3. 新增字頻資料，改善關聯字顯示順序\n
+		4. 候選字列擴展，點選候選列向下圓型箭頭\n
+		5. 三排鍵自動對應修正\n
+		6. 支援 HTC Flyer 裝置顯示\n
+		7. 支援 Galaxy Tab 裝置顯示\n
+		8. 新增自動中文標點模式設定\n
+		9. 改進初始資料庫選項\n
+		10. 更新預載資料庫內容 (需重新下載)\n
+		11. 輸入效能提昇、臭蟲修正\n
+		12. 支援 ChaCha 鍵盤輸入\n
+		13. 設定字型與鍵盤大小\n
+		14. 震動強度設定\n
+		15. 長按鍵盤鍵選單新增簡繁互換\n
+		16. 鍵盤 Swipe 功能\n
 		    
-		 - Up 跟键盘键长按一样的选单\n
-		 - Down 收键盘\n
-		 - Right 选候选列预设选项\n
+		 - Up 跟鍵盤鍵長按一樣的選單\n
+		 - Down 收鍵盤\n
+		 - Right 選候選列預設選項\n
 		 - Left Backspace\n
-		17. 许氏跟倚天26 臭虫修正\n
-		18. 向下的圆圈圈箭头，另外实体键盘也可展开候选列\n
-		19. 轻松输入法修正\n
-		20. 倚天41键注音符号键盘更新\n\n
+		17. 許氏跟倚天26 臭蟲修正\n
+		18. 向下的圓圈圈箭頭，另外實體鍵盤也可展開候選列\n
+		19. 輕鬆輸入法修正\n
+		20. 新增筆順五碼輸入法\n
+		21. 倚天41鍵注音符號鍵盤更新\n\n
 		 
-		软体键盘快捷键\n\n
+		軟體鍵盤快捷鍵\n\n
 		
-		1. 滑动 SPACE BAR 选择输入法\n
-		2. 长按 SPACE BAR 显示输入法选单与简繁互换\n
-		3. 按住 SHIFT + (英|数) 键 输入大写或符号 (Multi-Touch Input)\n\n
+		1. 滑動 SPACE BAR 選擇輸入法\n
+		2. 長按 SPACE BAR 顯示輸入法選單與簡繁互換\n
+		3. 按住 SHIFT + (英|數) 鍵 輸入大寫或符號 (Multi-Touch Input)\n\n
 		
-		实体键盘快捷键\n\n
+		實體鍵盤快捷鍵\n\n
 		
-		1. (SHIFT|FN) + 候选字右上标记 快速选字\n
-		2. CTRL + SPACE 混打/英文模式切换\n
-		3. CTRL + SHIFT 显示输入法选单\n
-		4. MENU + SHIFT 显示输入法选单\n
-		5. CTRL + (数字|符号) 键 输入全型字\n
-		6. MENU + / 显示符号选单\n
-		7. 往下键 扩展候选字列表\n
-		8. BACKSPACE 关闭候选字列表\n
+		1. (SHIFT|FN) + 候選字右上標記 快速選字\n
+		2. CTRL + SPACE 混打/英文模式切換\n
+		3. CTRL + SHIFT 顯示輸入法選單\n
+		4. MENU + SHIFT 顯示輸入法選單\n
+		5. CTRL + (數字|符號) 鍵 輸入全型字\n
+		6. MENU + / 顯示符號選單\n
+		7. 往下鍵 擴展候選字列表\n
+		8. BACKSPACE 關閉候選字列表\n
 	</string>
 	
 </resources>
