--- a/trunk/limehd/res/values-zh-rCN/strings.xml
+++ b/trunk/limehd/res/values-zh-rCN/strings.xml
@@ -513,9 +513,10 @@
 		更新说明\n
 		http://facebook.com/limeime\n\n
 	
-		1. 键盘文字显示更新\n
+		1. 新增字频资料，改善关联字显示顺序\n
+		   (字频功能需重汇字根或预载资料库来启用)\n
 		2. 新增注音连打功能\n
-		3. 新增字频资料，改善关联字显示顺序\n
+		3. 键盘文字显示更新\n
 		4. 候选字列扩展，点选候选列向下圆型箭头\n
 		5. 三排键自动对应修正\n
 		6. 支援 HTC Flyer 装置显示\n
