--- a/limehd/res/values-zh-rTW/strings.xml
+++ b/limehd/res/values-zh-rTW/strings.xml
@@ -513,9 +513,10 @@
 		更新說明\n
 		http://facebook.com/limeime\n\n
 	
-		1. 鍵盤文字顯示更新\n
+		1. 新增字頻資料，改善關聯字顯示順序\n
+		   (字頻功能需重匯字根或預載資料庫來啟用)\n
 		2. 新增注音連打功能\n
-		3. 新增字頻資料，改善關聯字顯示順序\n
+		3. 鍵盤文字顯示更新\n
 		4. 候選字列擴展，點選候選列向下圓型箭頭\n
 		5. 三排鍵自動對應修正\n
 		6. 支援 HTC Flyer 裝置顯示\n
