For each keyboard layout add correspond CH/EN/SYM switch keys

--- a/limehd/res/values-zh-rCN/strings.xml
+++ b/limehd/res/values-zh-rCN/strings.xml
@@ -536,7 +536,7 @@
 		 - Right 选候选列预设选项\n
 		 - Left Backspace\n
 		17. 许氏跟倚天26 臭虫修正\n
-		18. 向下的圆圈圈箭头，另外实体键盘也可展开候选列\n
+		18. 更换候选列展开按钮图示，实体键盘新增向下键展开候选列\n
 		19. 轻松输入法修正\n
 		20. 新增笔顺五码输入法\n
 		21. 倚天41键注音符号键盘更新\n\n
