--- a/limehd/res/values-zh-rTW/strings.xml
+++ b/limehd/res/values-zh-rTW/strings.xml
@@ -536,7 +536,7 @@
 		 - Right 選候選列預設選項\n
 		 - Left Backspace\n
 		17. 許氏跟倚天26 臭蟲修正\n
-		18. 向下的圓圈圈箭頭，另外實體鍵盤也可展開候選列\n
+		18. 更換候選列展開按鈕圖示，實體鍵盤新增向下鍵展開候選列\n
 		19. 輕鬆輸入法修正\n
 		20. 新增筆順五碼輸入法\n
 		21. 倚天41鍵注音符號鍵盤更新\n\n
