--- a/trunk/limehd/res/values-zh-rTW/strings.xml
+++ b/trunk/limehd/res/values-zh-rTW/strings.xml
@@ -509,6 +509,8 @@
 		<item>6</item>
 	</string-array>
 	
+	<string name="disable_physical_selkey_option">關閉實體鍵盤選字鍵</string>
+	
 	<string name="release_note">
 		更新說明\n
 		http://facebook.com/limeime\n\n
