1. update release notes

--- a/limehd/res/values-zh-rCN/strings.xml
+++ b/limehd/res/values-zh-rCN/strings.xml
@@ -518,58 +518,20 @@
 	<string name="reset_db_note">若文字无法正确输入，建议您重置数据库并重新下载或汇入字根文件.</string>
 	
 	<string name="release_note">
-	    \n** 若文字无法正确输入，建议您重置资料库并重新下载或汇入字根档案.
+	    \n** 若文字无法正确输入，建议您重置资料库并重新下载或汇入字根档案.\n
+	    \n版本更新说明
 	    \n** MileStone 3 键盘修正
 	    \n** ET26 及 许式键盘修正
 	    \n** 资料汇入重置问题修正\n\n
 	
-		更新说明\n
-		http://facebook.com/limeime\n\n
-	
-		1. 新增字频资料，改善关联字显示顺序\n
-		   (字频功能需重汇字根或预载数据库来启用)\n
-		2. 新增注音连打功能\n
-		3. 键盘文字显示更新\n
-		4. 候选字列扩展，点选候选列向下圆型箭头\n
-		5. 三排键自动对应修正\n
-		6. 支援 HTC Flyer 装置显示\n
-		7. 支援 Galaxy Tab 装置显示\n
-		8. 新增自动中文标点模式设定\n
-		9. 改进初始数据库选项\n
-		10. 更新预载数据库内容 (需重新下载)\n
-		11. 输入效能提升、臭虫修正\n
-		12. 支援 ChaCha 键盘输入\n
-		13. 设定字型与键盘大小\n
-		14. 震动强度设定\n
-		15. 长按键盘键选单新增简繁互换\n
-		16. 键盘 Swipe 功能\n
-		    
-		 - Up 跟键盘键长按一样的选单\n
-		 - Down 收键盘\n
-		 - Right 选候选列预设选项\n
-		 - Left Backspace\n
-		17. 许氏跟倚天26 臭虫修正\n
-		18. 更换候选列展开按钮图示，实体键盘新增向下键展开候选列\n
-		19. 轻松输入法修正\n
-		20. 新增笔顺五码输入法\n
-		21. 倚天41键注音符号键盘更新\n\n
-		 
-		软体键盘快捷键\n\n
+		LIME中文输入法Facebook粉丝专页\n
+		http://facebook.com/limeime/\n\n
+		LIME 使用与操作说明\n
+		http://netkidz.net/blog/\nhttp://goo.gl/vtW1F\n\n 
 		
-		1. 滑动 SPACE BAR 选择输入法\n
-		2. 长按 SPACE BAR 显示输入法选单与简繁互换\n
-		3. 按住 SHIFT + (英|数) 键 输入大写或符号 (Multi-Touch Input)\n\n
+		由于 Android 装置种类繁多，碍于专案团队设备上的限制无法做全面的测试并兼顾到各种不同键盘配置，若 LIME 无法支援您的硬体设备还请见谅。
+		若您对本专案感兴趣，欢迎加入开发或测试，亦欢迎厂商赞助团队设备回馈 Android 使用者社群。\n
 		
-		实体键盘快捷键\n\n
-		
-		1. (SHIFT|FN) + 候选字右上标记 快速选字\n
-		2. CTRL + SPACE 混打/英文模式切换\n
-		3. CTRL + SHIFT 显示输入法选单\n
-		4. MENU + SHIFT 显示输入法选单\n
-		5. CTRL + (数字|符号) 键 输入全型字\n
-		6. MENU + / 显示符号选单\n
-		7. 往下键 扩展候选字列表\n
-		8. BACKSPACE 关闭候选字列表\n
 	</string>
 	
 </resources>
