--- a/limehd/res/values-zh-rTW/strings.xml
+++ b/limehd/res/values-zh-rTW/strings.xml
@@ -520,9 +520,8 @@
 	<string name="release_note">
 	    \n** 若文字無法正確輸入，建議您重置資料庫並重新下載或匯入字根檔案.\n
 	    \n版本更新說明
-	    \n** MileStone 3 鍵盤修正
-	    \n** ET26 及 許式鍵盤修正
-	    \n** 資料匯入重置問題修正\n\n
+	    \n** 符號、英文鍵盤修正
+	    \n** 輕鬆輸入法鍵盤修正\n\n
 	
 		LIME中文輸入法Facebook粉絲專頁\n
 		http://facebook.com/limeime/\n\n
