1. Add LIMEBackupAgent to backup share preference. 2. Remove some redundant code in SearchService. 3. Correct the error on strings.xml for HS from Stroke5

--- a/limehd/res/values/strings.xml
+++ b/limehd/res/values/strings.xml
@@ -286,7 +286,7 @@
 		<item>Array</item>
 		<item>Array10</item>
 		<item>Stroke5</item>
-		<item>Stroke5</item>
+		<item>HS</item>
 	</string-array>
 	<!-- Keyboard short name List -->
     <string-array name="keyboardShortname">
